--- a/style/sheet.css
+++ b/style/sheet.css
@@ -4,3 +4,13 @@ body {
   font-family: 'Lato', sans-serif;
 	margin: 0;
 }
+
+body * {
+  box-sizing: border-box;
+}
+
+ol, ul {
+  list-style-type: none;
+  margin: 0;
+  padding: 0;
+}
